hasqd/tests/coptest/system/pos/002.sts
#!/bin/sh
$1/hasqd -c s=002.inp dsvt=1 dprn=1
