hasqd/tests/coptest/system/neg/006.sts
#!/bin/sh
$1/hasqd -lnqc s=006.inp dsvt=1 dprn=1

